# BlackHoleSimulator

./: .gitignore  meson.build
resources/shaders/: quad.fragment.glsl  quad.vertex.glsl  render.compute.glsl
src/: blackhole_renderer.cpp  blackhole_renderer.h  compute_shader.cpp  compute_shader.h  gamepad.cpp  gamepad.h  main.cpp  render_shader.cpp  render_shader.h  shader_program.cpp  shader_program.h
